	version found is at least version 1.1.4 (up from 1.1.3).

    o	The regression checks now have to be passed exactly, except
	those depending on recommended packages (which cannot be
	assumed to be present).

    o	There are new macros DYLIB_* for building dynamic libraries,
	and these are used for the dynamic Rmath library (which was
	previously built as a shared object).


UTILITIES

    o	R CMD check accepts "ORPHANED" as package maintainer. Package
	maintainers can now officially orphanize a package, i.e.,
	resign from maintaining a package.

    o	R CMD INSTALL (Unix only) is now 'safe': if the attempt to
	install a package fails, leftovers are removed.	 If the package
	was already installed, the old version is restored.

    o	R CMD build excludes possible (obsolete) data and vignette
	indices in DCF format (and hence also no longer rebuilds them).

    o	R CMD check now tests whether file names are valid across file
	systems and supported operating system platforms.  There is some
	support for code/documentation consistency checking for data
	sets and S4 classes.  Replacement functions and S3 methods in
	\usage sections are no longer ignored.

    o	R CMD Rdindex has been removed.


DEPRECATED & DEFUNCT

    o	The assignment operator `_' has been removed.

    o	printNoClass() is defunct.

    o	The classic MacOS port is no longer supported, and its files
	have been removed from the sources.

    o	The deprecated argument 'white' of parse() has been removed.

    o	Methods pacf/plot.mts() have been removed and their functionality
	incorporated into pacf.default/plot.ts().

    o	print.coefmat() is deprecated in favour of printCoefmat()
	(which is identical apart from the default for na.print which
	is changed from "" to "NA", and better handling of the 0-rank
	case where all coefficients are missing).

    o	codes() and codes<-() are deprecated, as almost all uses
	misunderstood what they actually do.
